Connected the backend

--- a/popup.html
+++ b/popup.html
@@ -13,5 +13,6 @@
     <label for="port">Portuguese</label>
     <input type="text" id="eng"/>
     <button id="sub">Submit</button>
+    <script src="writer.js"></script>
 </body>
 </html>
