--- a/popup.html
+++ b/popup.html
@@ -11,7 +11,7 @@
     <label for="eng">English</label>
     <input type="text" id="eng"/>
     <label for="port">Portuguese</label>
-    <input type="text" id="eng"/>
+    <input type="text" id="port"/>
     <button id="sub">Submit</button>
     <script src="writer.js"></script>
 </body>
